--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ dotenv = "0.15.0"
 log = "0.4.28"
 anyhow = "1.0.100"
 env_logger = "0.11.8"
+reqwest = { version = "0.12.24", features = ["json"] }
