--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ anyhow = "1.0.100"
 env_logger = "0.11.8"
 reqwest = { version = "0.12.24", features = ["json"] }
 async-trait = "0.1.89"
+tracing = "0.1.41"
