--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,16 @@ run-local="cargo run --features local"
 [features]
 local=[]
 
+[profile.release]
+debug = true
+
 [dependencies]
-async-graphql = { version = "7.0.17", features = ["dataloader"] }
-async-graphql-axum = { version = "7.0.17" }
+tracing = { version = "0.1.41", features = ["attributes"] }
+tracing-subscriber = "0.3"
+tracing-futures = "0.2"
+tracing-attributes = "=0.1.28"# required to fix async-graphql tracing
+async-graphql = { version = "=7.0.17", features = ["dataloader", "tracing-futures", "tracing", "opentelemetry"] }
+async-graphql-axum = { version = "=7.0.17" }
 tokio = { version = "1.48.0", features = ["full"] }
 axum = { version = "0.8.6" }
 serde = { version = "1.0", features = ["derive"] }
@@ -22,4 +29,8 @@ anyhow = "1.0.100"
 env_logger = "0.11.8"
 reqwest = { version = "0.12.24", features = ["json"] }
 async-trait = "0.1.89"
-tracing = "0.1.41"
+memory-stats = "1.2.0"
+
+[dev-dependencies]
+blondie = "0.5.2"
+flamegraph = "0.6.9"
