--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ env_logger = "0.11.8"
 reqwest = { version = "0.12.24", features = ["json"] }
 async-trait = "0.1.89"
 memory-stats = "1.2.0"
+serde_json = "1.0.145"
+byte-unit = "5.1.6"
 
 [dev-dependencies]
 blondie = "0.5.2"
