--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ async-trait = "0.1.89"
 memory-stats = "1.2.0"
 serde_json = "1.0.145"
 byte-unit = "5.1.6"
+alloc-metrics = "0.1.1"
 
 [dev-dependencies]
 blondie = "0.5.2"
