--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-graphql-demo"
+name = "server"
 version = "0.1.0"
 authors = ["Robin Seifert <darkguardsman@github.com>"]
 edition = "2024"
@@ -27,9 +27,8 @@ dotenv = "0.15.0"
 log = "0.4.28"
 anyhow = "1.0.100"
 env_logger = "0.11.8"
-reqwest = { version = "0.12.24", features = ["json"] }
+reqwest = { version = "0.12.24", default-features = false, features = ["http2", "charset", "json", "gzip", "brotli", "zstd", "deflate", "rustls-tls-native-roots"] }
 async-trait = "0.1.89"
-memory-stats = "1.2.0"
 serde_json = "1.0.145"
 byte-unit = "5.1.6"
 alloc-metrics = "0.1.1"
